src/objects/OperativeOne__OperativeIntegrationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>OperativeOne__Account_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We recommend using the enclosed account trigger to ping Operative.One anytime an account is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One.</description>
        <inlineHelpText>We recommend using the enclosed account trigger to ping Operative.One anytime an account is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One.</inlineHelpText>
        <label>Account Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperativeOne__Contact_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We recommend using the enclosed contact trigger to ping Operative.One anytime a contact is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One.</description>
        <inlineHelpText>We recommend using the enclosed contact trigger to ping Operative.One anytime a contact is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One.</inlineHelpText>
        <label>Contact Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1CRMSystemID__c</fullName>
        <description>The ID of the CRM system that has been configured in the Operative.One network. Example: 2</description>
        <inlineHelpText>The ID of the CRM system that has been configured in the Operative.One network. Example: 2</inlineHelpText>
        <label>Operative.One CRM System ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1Credentials__c</fullName>
        <description>Enter the credentials of an Operative.One API user on the publishers network. Format is: 
username:password. For example supportops@mm.com:pwd123</description>
        <inlineHelpText>Enter the credentials of an Operative.One API user on the publishers network. Format is: 
username:password. For example supportops@mm.com:pwd123</inlineHelpText>
        <label>O1 Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1Network__c</fullName>
        <description>The name of the Operative.One publisher network.</description>
        <inlineHelpText>The name of the Operative.One publisher network.</inlineHelpText>
        <label>Operative.One Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1URL__c</fullName>
        <description>The URL to be used for integration communication.</description>
        <inlineHelpText>The URL to be used for integration communication.</inlineHelpText>
        <label>Operative.One URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1_Account_Eligible_API_Name__c</fullName>
        <defaultValue>&quot;Operative_Eligible__c&quot;</defaultValue>
        <description>Enter the API name of the Account field to be used for Operative Eligible.</description>
        <inlineHelpText>Enter the API name of the Account field to be used for Operative Eligible.</inlineHelpText>
        <label>Account Eligible API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1_Contact_Eligible_API_Name__c</fullName>
        <defaultValue>&quot;Operative_Eligible__c&quot;</defaultValue>
        <description>Enter the API name of the Contact field to be used for Operative Eligible.</description>
        <inlineHelpText>Enter the API name of the Contact field to be used for Operative Eligible.</inlineHelpText>
        <label>Contact Eligible API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__O1_password__c</fullName>
        <label>O1_password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__Opportunity_Eligible_API_Name__c</fullName>
        <defaultValue>&quot;Operative_Eligible__c&quot;</defaultValue>
        <label>Opportunity Eligible API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperativeOne__Opportunity_Trigger_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We recommend using the enclosed opportunity trigger to ping Operative.One anytime an opportunity is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One. This property installs unchecked by default. We recommend completing full testing of the integration before turning on the trigger.</description>
        <inlineHelpText>We recommend using the enclosed opportunity trigger to ping Operative.One anytime an opportunity is created or modified so that a sync process can be run. Uncheck this box to prevent the trigger from calling out to Operative.One.</inlineHelpText>
        <label>Opportunity Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperativeOne__Salesforce_API_Username__c</fullName>
        <description>Enter the username of the user that will be used for API communication with Salesforce.com. This will ensure that the trigger does not fire immediately following write actions from Operative.One to Salesforce.com</description>
        <inlineHelpText>Enter the username of the user that will be used for API communication with Salesforce.com. This will ensure that the trigger does not fire immediately following write actions from Operative.One to Salesforce.com.</inlineHelpText>
        <label>Salesforce API Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Operative Integration Settings</label>
</CustomObject>